--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/calculator.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/calculator.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" href="/src/assets/calculator.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/calculator.png" />
     <title>Sbux Tip Calculator</title>
   </head>
   <body>
